refactor(front-end): metadata

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -13,8 +13,7 @@
     <meta name="description" content="%DESCRIPTION%" />
     <meta name="keywords" content="%KEYWORDS%" />
     <link rel="manifest" href="/app.webmanifest" />
-    <link rel="icon" sizes="192x192" href="/favicon/favicon-192.webp" />
-    <link rel="icon" sizes="512x512" href="/favicon/favicon-512.webp" />
+    <link rel="icon" sizes="192x192" href="/favicon/favicon.svg" />
 
     <!-- GOOGLE -->
     <meta name="rating" content="General" />
